--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   widgets_to_image: ^1.0.0
   mobile_scanner: ^5.2.1
   path_provider: ^2.1.5
+  uuid: ^4.4.0
 
 dev_dependencies:
   build_runner: ^2.4.7
